@@ -1,3 +1,10 @@
+2013-08-20  Jan Hubicka  <jh@suse.cz>
+
+	PR bootstrap/58186
+	* cgraph.c (cgraph_add_edge_to_call_site_hash): Overwrite hash
+	entry for direct edges.
+	(cgraph_turn_edge_to_speculative): Fix setting of can_throw_external.
+
 2013-08-20  David Malcolm  <dmalcolm@redhat.com>
 
 	Revert my last two changes, r201865 and r201864:
